[tool.poetry]
name = "aioqzone"
version = "0.12.10.dev8"
description = "Python wrapper for Qzone login and Qzone HTTP APIs."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/aioqzone/aioqzone"
repository = "https://github.com/aioqzone/aioqzone"
documentation = "https://aioqzone.github.io/aioqzone"
keywords = ["qzone-api", "autologin", "asyncio-spider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

packages = [
    { include = "aioqzone", from = "src" },
    { include = "jssupport", from = "src" },
    { include = "qqqr", from = "src" },
]
exclude = ["*.js"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aioqzone/aioqzone/issues"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "~0.23.0"
pydantic = "^1.10.4"
lxml = "^4.9.1"
cssselect = "^1.1.0"
numpy = "^1.22.3"
pillow = "^9.4.0"
rsa = "^4.8"
exceptiongroup = { version="^1.1.1", python = "<3.11" }

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
autodoc-pydantic = "*"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-rtd-theme = "*"
sphinx-intl = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
