[tool.poetry]
name = "aioqzone"
version = "0.14.1.dev8"
description = "Python wrapper for Qzone login and Qzone HTTP APIs."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/aioqzone/aioqzone"
repository = "https://github.com/aioqzone/aioqzone"
documentation = "https://aioqzone.github.io/aioqzone"
keywords = ["qzone-api", "autologin", "asyncio-spider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

packages = [
    { include = "aioqzone", from = "src" },
    { include = "qqqr", from = "src" },
]
exclude = ["*.js"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aioqzone/aioqzone/issues"
"Discussion" = "https://t.me/aioqzone_chatroom"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
rsa = "^4.8"
lxml = "^4.9.1"
cssselect = "^1.1.0"
tylisten = { version = "~0.5.1", source = "aioqzone-index" }
exceptiongroup = { version = "^1.1.1", python = "<3.11"}

numpy = { version = "^1.22.3", optional = true}
pillow = { version = "^9.4.0", optional = true}
pychaosvm = { version = "~0.2.3", optional = true, source = "aioqzone-index" }

[tool.poetry.extras]
captcha = ["numpy", "pillow", "pychaosvm"]

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "^2.0.1"  # autodoc-pydantic/#146 #162
sphinx-autodoc-typehints = "^1.19.5"
furo = "*"
sphinx-intl = "*"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
