[tool.poetry]
name = "aioqzone"
version = "1.7.3.dev2"
description = "A Python wrapper for Qzone login and H5 APIs."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/aioqzone/aioqzone"
repository = "https://github.com/aioqzone/aioqzone"
documentation = "https://aioqzone.github.io/aioqzone"
keywords = ["qzone-api", "autologin", "asyncio-spider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

packages = [
    { include = "aioqzone", from = "src" },
    { include = "qqqr", from = "src" },
]
exclude = ["*.js"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aioqzone/aioqzone/issues"
"Discussion" = "https://t.me/aioqzone_chatroom"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
rsa = "^4.8"
lxml = "^4.9.1"
cssselect = "^1.1.0"
tenacity = "^8.2.3"
exceptiongroup = "^1.1.1"
tylisten = "^2.1.3"
pillow = "^10.0.1"
pychaosvm = { version = "~0.3.2", source = "aioqzone-index" }
slide-tc = {version = "~0.1.1", optional = true, source = "aioqzone-index" }

[tool.poetry.extras]
captcha = ["slide-tc"]

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "!=5.13.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "^2.0.1"  # autodoc-pydantic/#146 #162
sphinx-autodoc-typehints = "^1.19.5"
furo = "*"
sphinx-intl = "*"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
