[metadata]
name = aioqzone
version = attr: aioqzone.VERSION
description = Python wrapper for Qzone web login and Qzone http api.
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/aioqzone
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    aiohttp
    pydantic
    pytz
    lxml~=4.6.4
    cssselect~=1.1
    opencv-python-headless

tests_require =
    pytest
    pytest-asyncio

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
doc=
    sphinx
    autodoc_pydantic
    sphinx_rtd_theme
